@@ -1,4 +1,7 @@
 2009/12/14 (TS):
+ - lanIpBasic.c, lanIpProto.h: added 'may_alias' attribute to several unions
+   that are used for deliberate type-punning.
+2009/12/14 (TS):
  - lanIpBasicSetup.h: BUGFIX -- had missed to declare lanIpIf as 'extern' :-(
    so it would end up being multiply defined.
 2009/12/09 (TS):
